# bcm-wiced-sdk

./: .gdbinit_attach  CHANGELOG.txt  LICENSE.txt  Makefile  README.txt  make  version.txt
WICED/: WICED.mk
WICED/RTOS/: wiced_rtos_common.c
WICED/WWD/: WWD.mk
WICED/internal/: config.c  config_http_content.c  dct.c  management.c  system_monitor.c  time.c  waf.c  wiced_cooee.c  wiced_easy_setup.c  wiced_internal_api.h  wiced_lib.c  wifi.c
apps/: README.txt
apps/demo/: README.txt
apps/snip/: README.txt
apps/test/: README.txt
apps/test/console/iperf/WICED/: Condition_FreeRTOS.c  Condition_ThreadX.c  Makefile.am  Makefile.in  Mutex_FreeRTOS.c  Mutex_ThreadX.c  Thread_FreeRTOS.c  Thread_ThreadX.c  compat.h  gettimeofday.c  inet.h  netdb.c  netdb.h  usleep.c  wiced_cpp.cpp
apps/test/console/iperf/WICED/LwIP/: sockets.c  sockets.h
apps/test/console/iperf/WICED/NetX/: sockets.c  sockets.h
apps/test/console/iperf/WICED/NetX_Duo/: sockets.c  sockets.h
apps/waf/: README.txt
apps/wwd/: README.txt
doc/: API.html  Thumbs.db
doc/API/: dir_2383a2ed2212fea9f7b15003a60efd43.html  dir_2e903163a7ac0780b1b27123d6357aba.html  dir_50d46f226d0e73e098478dd240c543bc.html  dir_76f863b9fa83dd71157f48dca44f24e9.html  doxygen.css  globals.html  (+272 more)
include/: default_wifi_config_dct.h  wiced.h  wiced_audio.h  wiced_constants.h  wiced_defaults.h  wiced_easy_setup.h  wiced_framework.h  wiced_management.h  wiced_platform.h  wiced_resource.h  wiced_result.h  wiced_rtos.h  wiced_security.h  wiced_tcpip.h  wiced_time.h  wiced_utilities.h  wiced_wifi.h
resources/: README.txt
(+1283 files in other folders)
