#
# Copyright 2014, Broadcom Corporation
# All Rights Reserved.
#
# This is UNPUBLISHED PROPRIETARY SOURCE CODE of Broadcom Corporation;
# the contents of this file may not be disclosed to third parties, copied
# or duplicated in any form, in whole or in part, without the prior
# written permission of Broadcom Corporation.
#
EXTRA_DIST = \
    Condition_FreeRTOS.c \
    gettimeofday.c \
    Makefile.am \
    Mutex_FreeRTOS.c \
    Thread_FreeRTOS.c \
    usleep.c \
    wiced_cpp.cpp
